# sanjana_ci_cd

./: .gitignore  DEMO_SCRIPT.md  README.md
backend/: .env.example  pyproject.toml
backend/src/: config.py
backend/src/api/: main.py  websocket.py
backend/src/creator/: analyzer.py  detector.py  generator.py  llm_generator.py
backend/src/creator/templates/: deploy_commands.py  go.py  java.py  nodejs.py  python_tmpl.py  rust.py
backend/src/db/: models.py  repository.py  session.py
backend/src/executor/: dispatcher.py  docker_runner.py  replanner.py  scheduler.py
backend/src/executor/agents/: __init__.py  base.py  build_agent.py  deploy_agent.py  security_agent.py  test_agent.py  verify_agent.py
backend/src/models/: __init__.py  messages.py  pipeline.py
backend/tests/: test_detector.py  test_generator.py  test_replanner.py  test_scheduler.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CreatePipeline.tsx  EditPipeline.tsx  ExecutionControls.tsx  ExecutionHistory.tsx  ExecutionLog.tsx  Layout.tsx  PipelineDAG.tsx  StageDetailPanel.tsx  StageNode.tsx  StatusBanner.tsx
frontend/src/context/: PipelineContext.tsx
frontend/src/hooks/: usePipeline.ts  useWebSocket.ts
frontend/src/types/: pipeline.ts
frontend/src/utils/: dagLayout.ts  statusColors.ts
